minor error effecting groupmates fixed, link to PostImages added

--- a/client/src/components/List/style.css
+++ b/client/src/components/List/style.css
@@ -21,13 +21,6 @@
 }
 
 .list-overflow-container li a {
-  color: grey;
+  color: black;
 }
 
-.list-overflow-container li:first-child {
-  border-top: none;
-}
-
-.list-overflow-container li:last-child {
-  border-bottom: none;
-}
